--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/54212428?s=280&v=4" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Básico</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
